pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: marketplace-frontend-pod
  labels:
    app: marketplace-frontend
spec:
  hostname: frontend-app
  containers:
    - name: app
      image: localhost/marketplace-frontend-nextjs:latest
      ports:
        - containerPort: 3000
          hostPort: 3000
      resources:
        requests:
          memory: "500Mi"
          cpu: "250m"
        limits:
          memory: "1Gi"
          cpu: "500m"
  restartPolicy: Always


# podman build --rm --layers=false -t marketplace-frontend-nextjs:latest . && podman play kube pod.yml
