frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-frontend-nextjs
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketplace-frontend-nextjs
  template:
    metadata:
      labels:
        app: marketplace-frontend-nextjs
    spec:
      containers:
        - name: nextjs
          image: thoggs/marketplace-frontend-nextjs:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
            requests:
              cpu: "250m"
              memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: marketplace-frontend-nextjs
  namespace: default
spec:
  type: NodePort
  selector:
    app: marketplace-frontend-nextjs
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 32000
