frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - nodePort: 32000
      port: 80
      protocol: TCP
      targetPort: 3000
