ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: marketplace-frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketplace-frontend-service
                port:
                  number: 80
